Pan and zoom fixes
The cards now change size when canvas is zoomed
(added scale(...) transform to draggable)

Dragging on to the canvas, it now drags to the right place if you have
panned or zoomed
(Used new calculateCanvasPosition function, that takes the transform,
moved the transform useState up from Canvas and into TrayAndCanvas)

Cards now longer overlap as you zoom in
(multiply top left pixel coords by transform.k)

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 .card, .trayCard, .trayOverlayCard {
+  box-sizing: content-box;
   padding: 10px;
   border-radius: 3px;
   border-color:chocolate;
